# MyHomeworks

./: hw_14.py  hw_15.py  hw_16.py  hw_17.py  hw_18.py  hw_19.py
hw_10/: HW №10.html
hw_11/: HW № 11.html  HW № 11.js
hw_12/: HW №12.html
hw_13/: HW №13.html  HW №13.js
hw_2/: hw_№2.html
hw_21/: hw_21.py
hw_22/: files_utils.py  files_utils_tests.py  test.csv  test.json  test.txt  test.yaml
hw_23/: Login&Password.csv  hw_23.py
hw_24/: hw_24.py
hw_25/: example.json  hw_25.py
hw_26/: hw_26.py  image.heic  requirements.txt
hw_27/: example.txt  file_classes.py  file_tests.py
hw_28/: hw_28.py
hw_29/: hw_29.py
hw_3/: hw_№3.html  style.css
hw_30/: hw_30.py
hw_31/: hw_31.sql
hw_32.1/: hw_32.1.sql
hw_33/: barbershop.db  hw_33.sql
hw_34/: hw_34.py  hw_34.sql
hw_35/: barbershop.db  hw_35.py
hw_36/: app.py
hw_37/: app.py  auth.py  models.py
hw_4/: for example (for me).html  hw_№4.html
hw_5/: hw_№5.html
hw_6/: HW №6.html
hw_7/: HW №7.html
hw_8/: HW №8.html
project_hw_barbershop/hw_38/: .gitignore  pyproject.toml
project_hw_barbershop/hw_38/barbershop/: settings.py  urls.py
project_hw_barbershop/hw_38/core/: admin.py  apps.py  forms.py  models.py  views.py
project_hw_barbershop/hw_38/core/migrations/: 0001_initial.py
project_hw_barbershop/hw_38/static/: main.css
project_hw_barbershop/hw_38/templates/: base.html  landing.html  order_detail.html  order_form.html  order_list.html  review_form.html  thanks.html  thanks_for_review.html
project_hw_barbershop/hw_38/templates/includes/: menu.html  order_card.html
(+3 files in other folders)
